--- a/graph_processing/pyproject.toml
+++ b/graph_processing/pyproject.toml
@@ -2,13 +2,13 @@
 name = "graph-processing"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
-readme = "README.md"
+authors = ["Mariusz Paluch <mariuszpaluch001@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 faust-streaming = "^0.11.3"
 networkx = "^3.3"
+simple-settings = "^1.2.0"
 
 
 [build-system]
