--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       - kafka
     environment:
       - WORKER_PORT=6066
-      - KAFKA_BOOTSTRAP_SERVER=kafka://kafka:9092
+      - KAFKA_BOOTSTRAP_SERVER=kafka://kafka:29092
       - KAFKA_BOOSTRAP_SERVER_NAME=kafka
-      - KAFKA_BOOSTRAP_SERVER_PORT=9092
+      - KAFKA_BOOSTRAP_SERVER_PORT=29092
     ports:
       - "8084:80"
       - "8000:8000"
@@ -29,10 +29,9 @@ services:
     ports:
       - "2181:2181"
       - "9092:9092"
-      - "29092:29092"
     environment:
       KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://kafka:9092"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
       KAFKA_ZOOKEPER_SESSION_TIMEOUT: "6000"
